--- a/toolkits/nature/packages/nature-sort-by/scss/50-components/sort-by.scss
+++ b/toolkits/nature/packages/nature-sort-by/scss/50-components/sort-by.scss
@@ -1,9 +1,32 @@
 .t-sort-by {
-	font-size: 0.875rem;
+	font-size: $sort-by--font-size;
+	line-height: $sort-by--line-height;
 }
 
 .t-sort-by__heading {
-	font-weight: 700;
+	font-weight: $sort-by--heading-font-weight;
+	margin-bottom: spacing(8);
+}
+
+.t-sort-by__input-container {
+	margin-bottom: spacing(8);
+}
+
+[class~='t-sort-by__input-container']:last-of-type  {
+	margin-bottom: 0;
+}
+
+.t-sort-by__input {
+	vertical-align: middle;
+	margin-top: -1px;
+}
+
+.t-sort-by__button {
+	margin-top: spacing(8);
+}
+
+.js .t-sort-by__button {
+	display: none;
 }
 
 @include media-query('md') {
@@ -12,15 +35,24 @@
 		align-items: center;
 	}
 
+	.t-sort-by__heading {
+		margin-bottom: 0;
+	}
+
+	.t-sort-by__input-container {
+		margin-bottom: 0;
+	}
+
 	.t-sort-by__input {
-		margin-left: spacing(16);
+		margin-left: spacing(16)
 	}
 
 	.t-sort-by__label {
 		padding-left: spacing(4);
 	}
-}
 
-.js .t-sort-by__button {
-	display: none;
+	.t-sort-by__button {
+		margin-left: spacing(16);
+		margin-top: 0;
+	}
 }
