--- a/toolkits/nature/packages/nature-sort-by/demo/index.hbs
+++ b/toolkits/nature/packages/nature-sort-by/demo/index.hbs
@@ -1,1 +1,25 @@
-{{> nature-sort-by }}
+<form action="/" method="post">
+	{{> nature-sort-by }}
+</form>
+<span style="display:block;font-size:1rem;margin-top:1.25rem">For demo purposes only: <button data-js-button>Turn JS off</button></span>
+<script>
+	const form = document.querySelector('form');
+	form.addEventListener('submit', function (event) {
+		event.preventDefault();
+		const data = Object.fromEntries(new FormData(event.target).entries());
+		const existingP = document.querySelector('p');
+		const p = existingP || document.createElement('p');
+		p.style = 'font-size:1rem;margin-top:1rem';
+		p.textContent = `Demo log: The sort-by form was submitted with the following parameters: ${Object.entries(data)[0][0]} = ${Object.entries(data)[0][1]}`;
+		if (!existingP) {
+			document.body.appendChild(p);
+		}
+	});
+	const button = document.querySelector('[data-js-button]');
+	button.style = 'font-size:1rem;margin-top:1rem';
+	button.addEventListener('click', function(event){
+		event.preventDefault();
+		document.documentElement.classList.toggle('js');
+		button.textContent.indexOf('off') > -1 ? button.textContent = 'Turn JS on' : button.textContent = 'Turn JS off';
+	});
+</script>
