--- a/toolkits/nature/packages/nature-sort-by/view/sort-by.hbs
+++ b/toolkits/nature/packages/nature-sort-by/view/sort-by.hbs
@@ -1,10 +1,10 @@
-<fieldset class="t-sort-by" data-sort-by>
-	<div class="t-sort-by__heading">Sort by:</div>
+<fieldset class="c-sort-by" data-sort-by>
+	<div class="c-sort-by__heading">Sort by:</div>
 	{{#each sortOrderFilter as |listElement|}}
-	<div class="t-sort-by__input-container">
-		<input class="t-sort-by__input" data-sort-by-input name="{{listElement.name}}" value="{{listElement.value}}" id="sort-by-{{listElement.value}}" type="radio" {{#if listElement.checked}}checked{{/if}}>
-		<label class="t-sort-by__label" for="sort-by-{{listElement.value}}">{{listElement.label}}</label>
+	<div class="c-sort-by__input-container">
+		<input class="c-sort-by__input" data-sort-by-input name="{{listElement.name}}" value="{{listElement.value}}" id="sort-by-{{listElement.value}}" type="radio" {{#if listElement.checked}}checked{{/if}}>
+		<label class="c-sort-by__label" for="sort-by-{{listElement.value}}">{{listElement.label}}</label>
 	</div>
 	{{/each}}
-	<button class="t-sort-by__button" data-sort-by-button type="submit">Submit</button>
+	<button class="c-sort-by__button" data-sort-by-button type="submit">Submit</button>
 </fieldset>
