--- a/toolkits/springer/packages/springer-media/demo/index.hbs
+++ b/toolkits/springer/packages/springer-media/demo/index.hbs
@@ -1,39 +1,41 @@
-<ul>
-	{{! Set context for data to show image on left }}
-	{{#with lhs}}
-	{{> media }}
-	{{/with}}
-</ul>
-<br>
-<ul>
-	{{! Set context for data to show image on right }}
-	{{#with rhs}}
-	{{> media }}
-	{{/with}}
-</ul>
-<br>
-<ul>
-	{{! Set context for data to not show image }}
-	{{> media }}
-</ul>
-<br>
-<ul>
-	{{! Set context for data to show image on left with "Play" icon }}
-	{{#with playLeft}}
-	{{> media }}
-	{{/with}}
-</ul>
-<br>
-<ul>
-	{{! Set context for data to show image on right with "Play" icon }}
-	{{#with playRight}}
-	{{> media }}
-	{{/with}}
-</ul>
-<br>
-<ul>
-	{{! Set context for data to show image stacked on text }}
-	{{#with stacked}}
-	{{> media }}
-	{{/with}}
-</ul>
+<main class="u-container">
+	<ul>
+		{{! Set context for data to show image on left }}
+		{{#with lhs}}
+			{{> media }}
+		{{/with}}
+	</ul>
+	<br>
+	<ul>
+		{{! Set context for data to show image on right }}
+		{{#with rhs}}
+			{{> media }}
+		{{/with}}
+	</ul>
+	<br>
+	<ul>
+		{{! Set context for data to show image on left with "Play" icon }}
+		{{#with playLeft}}
+			{{> media }}
+		{{/with}}
+	</ul>
+	<br>
+	<ul>
+		{{! Set context for data to show image on right with "Play" icon }}
+		{{#with playRight}}
+			{{> media }}
+		{{/with}}
+	</ul>
+	<br>
+	<ul>
+		{{! Set context for data to show image stacked on text }}
+		{{#with stacked}}
+			{{> media }}
+		{{/with}}
+	</ul>
+	<br>
+	<ul>
+		{{! Set context for data to not show image }}
+		{{> media }}
+	</ul>
+</main>
