--- a/toolkits/springer/packages/springer-media/demo/main.scss
+++ b/toolkits/springer/packages/springer-media/demo/main.scss
@@ -12,3 +12,4 @@
 
 // utilities
 @import '../node_modules/@springernature/brand-context/default/scss/60-utilities/hiding.scss';
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/container.scss';
