Updates strip unit function and triangle mixin in brand context to use Dart Sass syntax for math

--- a/context/brand-context/springer/scss/30-mixins/triangle.scss
+++ b/context/brand-context/springer/scss/30-mixins/triangle.scss
@@ -1,5 +1,5 @@
 @mixin triangle($direction, $size-y, $size-x, $color) {
-	$size-x: $size-x / 2;
+	$size-x: $size-x * 0.5;
 	content: '';
 	display: block;
 	width: 0;
