--- a/context/brand-context/default/scss/20-functions/strip-unit.scss
+++ b/context/brand-context/default/scss/20-functions/strip-unit.scss
@@ -1,7 +1,9 @@
+@use "sass:math";
+
 @function strip-unit($number) {
 	@if type-of($number) == 'number' {
 		@if not unitless($number) {
-			@return $number / ($number * 0 + 1);
+			@return math.div($number, $number * 0 + 1);
 		}
 		@warn "#{$number} is already unitless, is this function call necessary?";
 		@return $number;
