put back --flush modifier to reset padding in the card__body

--- a/toolkits/global/packages/global-card/scss/50-components/card.scss
+++ b/toolkits/global/packages/global-card/scss/50-components/card.scss
@@ -101,6 +101,12 @@
 // modifiers
 // ---------
 
+.c-card--flush {
+	.c-card__body {
+		padding: 0;
+	}
+}
+
 // --major
 .c-card--major {
 	font-size: $card--major-font-size;
