custom hero colors

--- a/toolkits/springer/packages/springer-hero/demo/index.hbs
+++ b/toolkits/springer/packages/springer-hero/demo/index.hbs
@@ -1,1 +1,4 @@
-{{>hero imageSrc='./img/example.png'}}
+<h2>Default</h2>
+{{>hero default}}
+<h2 class="u-mt-32">Custom background color</h2>
+{{>hero customColor}}
