--- a/toolkits/springer/packages/springer-hero/view/springer-hero.hbs
+++ b/toolkits/springer/packages/springer-hero/view/springer-hero.hbs
@@ -1,4 +1,4 @@
-<div class="c-hero">
+<div class="c-hero"{{#if color}} style="background-color: {{color}}"{{/if}}>
 	{{#if imageLeft}}
 		<div class="c-hero__image">
 			<img src="{{imageSrc}}" alt=""/>
