Adds secondary colour scheme to Global Pill

--- a/toolkits/global/packages/global-pill/demo/index.hbs
+++ b/toolkits/global/packages/global-pill/demo/index.hbs
@@ -3,5 +3,8 @@
     <li>
         <a href="{{pillUrl}}" class="c-pill">{{label}}</a>
     </li>
+	<li>
+		<div class="c-pill c-pill--secondary">{{label}} with secondary colours</div>
+	</li>
 	{{/each}}
 </ul>
