--- a/toolkits/global/packages/global-pill/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-pill/scss/10-settings/default.scss
@@ -1,7 +1,9 @@
-$pill--background-color: greyscale(20);
+$pill--background-color: greyscale(60);
 $pill--border-radius: 20px;
 $pill--padding: 5px 10px;
 $pill--font-weight: 700;
 $pill--color: #fff;
 $pill--margin-right: 4px;
 $pill--margin-bottom: 10px;
+$pill--secondary-color: greyscale(40);
+$pill--secondary-background-color: greyscale(95);
