[AK,MC] Refactor to meet new Global footer design * BREAKING:     * Delete brand settings in favour to only use the default (intentional)     * Restructure the context.json to include `default` and `extended` variants     * Rework the README file entirely     * Change default color and spacing     * Replace `--legal-padding-top` variable with `--legal-margin-top` * Add a set of links, inside a navigation, that lives above the logo * Add a `corporate-level` template in the `view` * Use `corporate-level` partial into demo's `index` template

--- a/toolkits/global/packages/global-corporate-footer/demo/main.scss
+++ b/toolkits/global/packages/global-corporate-footer/demo/main.scss
@@ -3,3 +3,7 @@
 
 @import '../scss/10-settings/default';
 @import '../scss/50-components/corporate-footer';
+
+@import '../node_modules/@springernature/brand-context/default/scss/30-mixins/lists';
+
+@import '../node_modules/@springernature/brand-context/default/scss/60-utilities/container';
