--- a/toolkits/global/packages/global-corporate-footer/scss/50-components/corporate-footer.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/50-components/corporate-footer.scss
@@ -4,15 +4,33 @@
 	font-family: $corporate-footer--font-family;
 	padding-top: $corporate-footer--padding-top;
 	padding-bottom: $corporate-footer--padding-bottom;
+	color: $corporate-footer--text-color;
+}
+
+.c-corporate-footer__links {
+	@include u-list-inline;
+	margin-bottom: $corporate-footer--links-margin-bottom;
+	line-height: $corporate-footer--item-line-height;
+
+	li:not(:last-child) {
+		margin-right: $corporate-footer--item-margin-right;
+	}
 }
 
 .c-corporate-footer__legal {
 	color: $corporate-footer--text-color;
 	font-size: $corporate-footer--font-size;
+	margin-top: $corporate-footer--legal-margin-top;
 	margin-bottom: $corporate-footer--margin-bottom;
-	padding-top: $corporate-footer--legal-padding-top;
 }
 
 .c-corporate-footer__link {
 	@include u-link-inherit;
+	white-space: nowrap;
+}
+
+button.c-corporate-footer__link {
+	background: none;
+	border: none;
+	text-decoration: underline;
 }
