--- a/toolkits/global/packages/global-pill/scss/50-components/pill.scss
+++ b/toolkits/global/packages/global-pill/scss/50-components/pill.scss
@@ -15,3 +15,7 @@
 	border-color: $pill--secondary-color;
 	background-color: $pill--secondary-background-color;
 }
+
+.c-pill--borderless {
+	border: none;
+}
