[MC] Add requested changes from review
* Apply some copy changes to README
* Add a section about template configuration in README
* Rename `corporate-level` partial to `corporate-footer`
* Apply requested changes to demo's `main.scss`
* Replace `u-container` div in favour to new
  `c-corporate-footer__container`
* Patch `default` in `context.js` to have the Cookie item as a button as
  well

--- a/toolkits/global/packages/global-corporate-footer/demo/index.hbs
+++ b/toolkits/global/packages/global-corporate-footer/demo/index.hbs
@@ -1,9 +1,9 @@
 <strong>Default footer</strong>
 {{#with default}}
-	{{> corporate-level}}
+	{{> corporate-footer}}
 {{/with}}
 <br>
 <strong>Footer with extended links</strong>
 {{#with extended}}
-	{{> corporate-level}}
+	{{> corporate-footer}}
 {{/with}}
