--- a/toolkits/global/packages/global-corporate-footer/view/corporate-footer.hbs
+++ b/toolkits/global/packages/global-corporate-footer/view/corporate-footer.hbs
@@ -1,5 +1,5 @@
 <div class="c-corporate-footer">
-    <div class="u-container">
+    <div class="c-corporate-footer__container">
 		{{#with navigation}}
 			<nav>
 				<ul class="c-corporate-footer__links">
