[AK,MC,AH] Refactor to meet new Global footer design (#699)
* BREAKING:
    * Delete brand settings in favour to only use the default
(intentional)
    * Restructure the context.json to include `default` and `extended` variants
    * Rework the README file entirely
    * Change default color and spacing
    * Replace `--legal-padding-top` variable with `--legal-margin-top`
* Add a set of links, inside a navigation, that lives above the logo
* Add a `corporate-level` template in the `view`
* Use `corporate-level` partial into demo's `index` template

<img width="1598" alt="screenshot of latest demo" src="https://user-images.githubusercontent.com/1223305/155368282-2644a854-2add-472c-bcb0-4ab7bc8bf87e.png">

Co-authored-by: Amy Hupe <amy.l.hupe@gmail.com>
Co-authored-by: Alex Kilgour <alexjkilgour@gmail.com>

--- a/toolkits/global/packages/global-corporate-footer/demo/index.hbs
+++ b/toolkits/global/packages/global-corporate-footer/demo/index.hbs
@@ -1,8 +1,9 @@
-<div class="c-corporate-footer">
-    <div class="u-container">
-		{{#with image}}
-        <img src="{{src}}" alt="{{alt}}" loading="lazy" width="140" height="14"/>
-		{{/with}}
-        <p class="c-corporate-footer__legal" data-test="copyright">{{{copyright}}}</p>
-    </div>
-</div>
+<strong>Default footer</strong>
+{{#with default}}
+	{{> corporate-footer}}
+{{/with}}
+<br>
+<strong>Footer with extended links</strong>
+{{#with extended}}
+	{{> corporate-footer}}
+{{/with}}
