--- a/toolkits/global/packages/global-corporate-footer/demo/main.scss
+++ b/toolkits/global/packages/global-corporate-footer/demo/main.scss
@@ -1,5 +1,10 @@
+@charset "UTF-8";
+
+// we must not add `node_modules/` to the Sass includePaths config,
+//   so use relative paths here. Paths should be relative to this file.
 @import '../node_modules/@springernature/brand-context/default/scss/core.scss';
 @import '../node_modules/@springernature/brand-context/default/scss/enhanced.scss';
 
+// component SCSS
 @import '../scss/10-settings/default';
 @import '../scss/50-components/corporate-footer';
