[MC] Patch Global corporate footer
- Explicitly set extra styling for footer items that are buttons to avoid
    any inherited styling(from `button`)
    * Set padding to 0
    * Set same font family, hover style and focus style as the other footer
        items
- Explicitly set yellow focus color for footer interactive elements
- Assign `.c-corporate-footer__link` class to logo link in the template
- Explicitly set vertical alignment for the logo

--- a/toolkits/global/packages/global-corporate-footer/scss/50-components/corporate-footer.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/50-components/corporate-footer.scss
@@ -31,11 +31,20 @@
 .c-corporate-footer__link {
 	@include u-link-inherit;
 	white-space: nowrap;
+
+	&:focus {
+		outline: spacing(4) solid #ffcc00;
+	}
+
+	> img {
+		vertical-align: middle;
+	}
 }
 
 button.c-corporate-footer__link {
-	background: none;
+	@include u-link-underline;
 	border: none;
-	text-decoration: underline;
 	padding: 0;
+	background: none;
+	font-family: $corporate-footer--font-family;
 }
