--- a/toolkits/global/packages/global-corporate-footer/view/corporate-footer.hbs
+++ b/toolkits/global/packages/global-corporate-footer/view/corporate-footer.hbs
@@ -17,7 +17,7 @@
 			</nav>
 		{{/with}}
 		{{#with image}}
-			<a href="{{link}}">
+			<a href="{{link}}" class="c-corporate-footer__link">
 				<img src="{{src}}" alt="{{alt}}" loading="lazy" width="200" height="20"/>
 			</a>
 		{{/with}}
