--- a/toolkits/springer/packages/springer-publisher-footer/scss/50-components/_publisher-footer.scss
+++ b/toolkits/springer/packages/springer-publisher-footer/scss/50-components/_publisher-footer.scss
@@ -59,6 +59,9 @@
 }
 
 .c-publisher-footer__link {
+	border: 0;
+	padding: 0;
+	background: none;
 	@include u-text-furniture;
 	@include u-link-interface;
 	@include gray-link;
