[MC] Fix mistakes in template around `buttonProperties`
- Patch `buttonProps` to `buttonProperties`
- Add extra wrapping curlies to avoid conversion to HTML entities

--- a/toolkits/global/packages/global-corporate-footer/view/corporate-footer.hbs
+++ b/toolkits/global/packages/global-corporate-footer/view/corporate-footer.hbs
@@ -9,7 +9,7 @@
 							<a class="c-corporate-footer__link" href="{{url}}">{{text}}</a>
 						{{/if}}
 						{{#if buttonProperties}}
-							<button class="c-corporate-footer__link" {{buttonProps}}>{{text}}</button>
+							<button class="c-corporate-footer__link" {{{buttonProperties}}}>{{text}}</button>
 						{{/if}}
 					</li>
 					{{/each}}
