move SN corporate colours to shared default context

--- a/context/brand-context/default/scss/10-settings/colors/shared.scss
+++ b/context/brand-context/default/scss/10-settings/colors/shared.scss
@@ -6,3 +6,8 @@
 
 // Open Access
 $context--open-access-color: #b74616;
+
+// Springer Nature Corporate colours
+$context--universal-blue: #01324b;
+$context--grey-blue-light1: #ebf1f5;
+$context--grey-blue-light2: #cedbe0;
