--- a/toolkits/global/packages/global-card/scss/10-settings/springer.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/springer.scss
@@ -14,5 +14,6 @@ $card--title-font-weight: normal;
 $card--title-heading: h3;
 $card--border-width: 1px;
 $card--border: 1px solid greyscale(80);
+$card--font-size: 1rem;
 $card--dark-background: color('dark-blue');
 $card--box-shadow: none;
