springer listing content with line clamp

--- a/toolkits/springer/packages/springer-listing/demo/index.hbs
+++ b/toolkits/springer/packages/springer-listing/demo/index.hbs
@@ -4,7 +4,7 @@
 	{{>listings}}
 {{/with}}
 
-<h2>Without authors</h2>
+<h2>Without authors and with three-line teasers</h2>
 
 {{#with listingsWithoutAuthors}}
 	{{>listings}}
