Rename SpringerNature breakpoint keys to match default brand-context keys
I raised an issue I had while trying to use SpringerNature Header component.
The header component was using default brand-context breakpoint key names rather
than SpringerNatures brands breakpoints. This caused an issue when loading in brand-context
and SpringerNature because both imports use the same sass variable name so ends up
overwriting each other. THere is a work aroudn but it involves reimporting default
breakpoints again which is not idead because it would overwrite SN breakpoints again.

To overcome this issue and some as mentioned By Ben Clark

https://springernature.slack.com/archives/C1HGRAQ8G/p1647529393387199?thread_ts=1647528664.456959&cid=C1HGRAQ8G

> Yeah well Elements is built around the idea of settings inheritance and overrides. So it’s important to use the same
> variable/key names (edited)

and Stuart Robinson

https://springernature.slack.com/archives/C1HGRAQ8G/p1647529498962329?thread_ts=1647528664.456959&cid=C1HGRAQ8G

> if FEDs cross teams and codebases I think a single naming convention would be better (and tokens could help adjust the
> values of that naming convention accordingly). Well, I think a clear, agreed, naming convention that everyone uses
> regardless if they touch various codebases or not is a good thing

I agree with both of them that we should try use the same variable name/keys and agree a naming convention.

As part of this change, I did add an extra breakpoint for SpringerNature breakpoints as it only references 4 key instead of
5. The extra key is simply using the same value as default brand, it could be changed if other teams feel it should be.

I tested this locally and worked without any issues. It meant I could remove the work around to reimport default breakpoints.

Any developers looking to updated brand-context to the version should do a find/replace across their codebase

'tablet-width'-> 'xs'
'tablet-wide-width' -> 'sm'
'wide-layout' -> '

--- a/context/brand-context/springernature/scss/10-settings/breakpoints.scss
+++ b/context/brand-context/springernature/scss/10-settings/breakpoints.scss
@@ -4,8 +4,9 @@
  */
 
 $context--breakpoints: (
-	'tablet-width': 480px,
-	'tablet-wide-width': 768px,
-	'wide-layout': 876px,
-	'desktop-width': 1024px
+	'xs': 480px, // formly  'tablet-width'
+	'sm': 768px, // formly 'tablet-wide-width'
+	'md': 876px, // formly 'wide-layout'
+	'lg': 1024px, // formly 'desktop-width'
+	'xl': 1220px
 );
