--- a/toolkits/global/packages/global-card/scss/10-settings/springer.scss
+++ b/toolkits/global/packages/global-card/scss/10-settings/springer.scss
@@ -8,6 +8,7 @@
 
 // Springer overrides
 $card--padding-x: 0;
+$card--background: #fff;
 $card--dark-background: #00285a;
 $card--dark-color: #fff;
 $card--title-font-weight: normal;
