adds tokens import to abstract.scss files

--- a/context/brand-context/springer/scss/abstracts.scss
+++ b/context/brand-context/springer/scss/abstracts.scss
@@ -4,6 +4,9 @@
  * These files don’t output any CSS when compiled
  */
 
+// 00-tokens
+@import '00-tokens/';
+
 // These settings must come first, as other settings can reference them
 @import '10-settings/colors/default';
 @import '10-settings/style';
