--- a/context/brand-context/springernature/scss/abstracts.scss
+++ b/context/brand-context/springernature/scss/abstracts.scss
@@ -4,6 +4,9 @@
  * These files don’t output any CSS when compiled
  */
 
+// 00-tokens
+@import '00-tokens/';
+
 // 10-settings
 // These settings must come first, as other settings can reference them
 @import '10-settings/breakpoints';
