update brand-context and use shared corporate colour

--- a/toolkits/global/packages/global-corporate-footer/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/10-settings/default.scss
@@ -11,7 +11,7 @@ $corporate-footer--border: 2px solid #dadada;
 $corporate-footer--padding-top: $corporate-footer--vertical-rhythm;
 $corporate-footer--padding-bottom: $corporate-footer--vertical-rhythm;
 $corporate-footer--font-family: $context--font-family-sans;
-$corporate-footer--background-color: #01324b;
+$corporate-footer--background-color: $context--universal-blue;
 $corporate-footer--font-size: 1rem;
 $corporate-footer--text-color: white;
 
