new springer footer colours and corporate footer adjustment

--- a/toolkits/global/packages/global-corporate-footer/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-corporate-footer/scss/10-settings/default.scss
@@ -7,7 +7,7 @@
 $corporate-footer--vertical-rhythm: spacing(32);
 
 $corporate-footer--margin-bottom: spacing(0);
-$corporate-footer--border: 2px solid #dadada;
+$corporate-footer--border: 2px solid #fff;
 $corporate-footer--padding-top: $corporate-footer--vertical-rhythm;
 $corporate-footer--padding-bottom: $corporate-footer--vertical-rhythm;
 $corporate-footer--font-family: $context--font-family-sans;
