update border color

--- a/toolkits/global/packages/global-footer/scss/10-settings/default.scss
+++ b/toolkits/global/packages/global-footer/scss/10-settings/default.scss
@@ -10,13 +10,13 @@ $footer--spacing-medium: 16px;
 $footer--spacing-large: 24px;
 
 $footer--margin-bottom: spacing(0);
-$footer--border: 2px solid #dadada;
+$footer--border: 2px solid #fff;
 $footer--padding-top: $footer--vertical-rhythm;
 $footer--padding-bottom: $footer--vertical-rhythm;
 $footer--font-family: $context--font-family-sans;
 $footer--background-color: $context--universal-blue;
 $footer--font-size: 1rem;
-$footer--text-color: white;
+$footer--text-color: #fff;
 $footer--heading-font-family: $context--font-family-sans;
 
 $footer--links-margin-bottom: $footer--vertical-rhythm;
