[AK] create partials, require footer tag from consumer

--- a/toolkits/global/packages/global-footer/demo/index.hbs
+++ b/toolkits/global/packages/global-footer/demo/index.hbs
@@ -14,5 +14,7 @@
 <br>
 <strong>Footer with product and extended links</strong>
 {{#with product}}
-	{{> footer}}
+	<footer>
+		{{> footer}}
+	</footer>
 {{/with}}
