--- a/toolkits/global/packages/global-footer/view/partials/product.hbs
+++ b/toolkits/global/packages/global-footer/view/partials/product.hbs
@@ -1,7 +1,7 @@
-{{#if footerGroups}}
+{{#if productGroups}}
     <div class="c-footer__container">
         <div class="c-footer__grid c-footer__group--separator">
-            {{#each footerGroups as |siteNavItem|}}
+            {{#each productGroups as |siteNavItem|}}
             <div class="c-footer__group">
                 <h3 class="c-footer__heading">{{siteNavItem.title}}</h3>
                 <ul class="c-footer__list">
