--- a/context/brand-context/nature/scss/00-tokens/_illustration.variables.scss
+++ b/context/brand-context/nature/scss/00-tokens/_illustration.variables.scss
@@ -1,9 +1,9 @@
 
 // Do not edit directly
-// Generated on Wed, 27 Apr 2022 14:51:22 GMT
+// Generated on Wed, 27 Apr 2022 15:05:42 GMT
 
 $illustration-background-001: #29303C;
-$illustration-background-002: {nature-color.gunmetal.500;
+$illustration-background-002: #536179;
 $illustration-background-003: #c2c9d6;
 $illustration-background-004: #999999;
 $illustration-background-005: #dadada;
