--- a/context/brand-context/default/scss/00-tokens/_state.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_state.variables.scss
@@ -1,9 +1,9 @@
 
 // Do not edit directly
-// Generated on Wed, 27 Apr 2022 15:05:42 GMT
+// Generated on Wed, 27 Apr 2022 15:18:06 GMT
 
-$state-focus: #ffcc00;
-$state-error: #c40606;
-$state-warning: #f58220;
-$state-success: #00a69d;
-$state-information: #003f8d;
+$token-state-focus: #ffcc00;
+$token-state-error: #c40606;
+$token-state-warning: #f58220;
+$token-state-success: #00a69d;
+$token-state-information: #003f8d;
