--- a/context/brand-context/default/scss/00-tokens/_link.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_link.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Wed, 27 Apr 2022 15:05:42 GMT
+// Generated on Wed, 27 Apr 2022 15:18:06 GMT
 
-$link-color: #025e8d;
-$link-hover: #01324b;
-$link-visited: #a345c9;
-$link-focus: #ffcc00;
+$token-link-color: #025e8d;
+$token-link-hover: #01324b;
+$token-link-visited: #a345c9;
+$token-link-focus: #ffcc00;
