--- a/context/brand-context/default/scss/00-tokens/_text.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_text.variables.scss
@@ -1,7 +1,7 @@
 
 // Do not edit directly
-// Generated on Wed, 27 Apr 2022 15:05:42 GMT
+// Generated on Wed, 27 Apr 2022 15:18:06 GMT
 
-$text-primary: #000000;
-$text-secondary: #666666;
-$text-reversed: #ffffff;
+$token-text-primary: #000000;
+$token-text-secondary: #666666;
+$token-text-reversed: #ffffff;
