--- a/context/brand-context/default/scss/00-tokens/_sizing.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_sizing.variables.scss
@@ -1,14 +1,14 @@
 
 // Do not edit directly
-// Generated on Wed, 27 Apr 2022 15:18:06 GMT
+// Generated on Wed, 27 Apr 2022 21:29:21 GMT
 
-$sizing-0: 0; // no spacing, zero.
-$sizing-25: .0625; // .0625rem, 1px
-$sizing-50: .125rem; // .125rem, 2px
-$sizing-100: .25rem; // .25rem, 4px.
-$sizing-200: .5rem; // .5rem, 8px.
-$sizing-400: 1rem; // 1rem, 16px.
-$sizing-600: 1.5rem; // 1.5rem, 24px.
-$sizing-800: 2rem; // 2rem, 32px.
-$sizing-1200: 3rem; // 3rem, 48px.
-$sizing-1600: 4rem; // 4rem, 64px.
+$tokens--sizing-0: 0; // no spacing, zero.
+$tokens--sizing-25: .0625; // .0625rem, 1px
+$tokens--sizing-50: .125rem; // .125rem, 2px
+$tokens--sizing-100: .25rem; // .25rem, 4px.
+$tokens--sizing-200: .5rem; // .5rem, 8px.
+$tokens--sizing-400: 1rem; // 1rem, 16px.
+$tokens--sizing-600: 1.5rem; // 1.5rem, 24px.
+$tokens--sizing-800: 2rem; // 2rem, 32px.
+$tokens--sizing-1200: 3rem; // 3rem, 48px.
+$tokens--sizing-1600: 4rem; // 4rem, 64px.
