--- a/context/brand-context/default/scss/00-tokens/_state.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_state.variables.scss
@@ -1,9 +1,9 @@
 
 // Do not edit directly
-// Generated on Wed, 27 Apr 2022 15:18:06 GMT
+// Generated on Wed, 27 Apr 2022 21:29:22 GMT
 
-$token-state-focus: #ffcc00;
-$token-state-error: #c40606;
-$token-state-warning: #f58220;
-$token-state-success: #00a69d;
-$token-state-information: #003f8d;
+$tokens--state-focus: #ffcc00;
+$tokens--state-error: #c40606;
+$tokens--state-warning: #f58220;
+$tokens--state-success: #00a69d;
+$tokens--state-information: #003f8d;
