--- a/context/brand-context/default/scss/00-tokens/_background.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_background.variables.scss
@@ -1,11 +1,11 @@
 
 // Do not edit directly
-// Generated on Wed, 27 Apr 2022 15:18:06 GMT
+// Generated on Wed, 27 Apr 2022 21:29:22 GMT
 
-$token-background-page: #f8f8f8;
-$token-background-container: color.white};
-$token-background-facet: #f3f3f3;
-$token-background-footer: #01324b;
-$token-background-table-heading: #666666;
-$token-background-table-row-odd: #cedbe0;
-$token-background-table-row-even: #ebf1f5;
+$tokens--background-page: #f8f8f8;
+$tokens--background-container: color.white};
+$tokens--background-facet: #f3f3f3;
+$tokens--background-footer: #01324b;
+$tokens--background-table-heading: #666666;
+$tokens--background-table-row-odd: #cedbe0;
+$tokens--background-table-row-even: #ebf1f5;
