--- a/context/brand-context/default/scss/00-tokens/_border.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_border.variables.scss
@@ -1,10 +1,10 @@
 
 // Do not edit directly
-// Generated on Wed, 27 Apr 2022 15:18:06 GMT
+// Generated on Wed, 27 Apr 2022 21:29:22 GMT
 
-$token-border-color-primary: #000000;
-$token-border-color-input: #555555;
-$token-border-color-button: #025e8d;
-$token-border-width-25: .0625;
-$token-border-width-50: .125rem;
-$token-border-width-100: .25rem;
+$tokens--border-color-primary: #000000;
+$tokens--border-color-input: #555555;
+$tokens--border-color-button: #025e8d;
+$tokens--border-width-25: .0625;
+$tokens--border-width-50: .125rem;
+$tokens--border-width-100: .25rem;
