--- a/context/brand-context/default/scss/00-tokens/_breakpoints.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_breakpoints.variables.scss
@@ -1,9 +1,9 @@
 
 // Do not edit directly
-// Generated on Wed, 27 Apr 2022 15:18:06 GMT
+// Generated on Wed, 27 Apr 2022 21:29:21 GMT
 
-$breakpoints-xs: 320px; // mobile
-$breakpoints-sm: 580px; // small tablet
-$breakpoints-md: 768px; // tablet
-$breakpoints-lg: 1024px; // small desktop
-$breakpoints-xl: 1220px; // desktop
+$tokens--breakpoints-xs: 320px; // mobile
+$tokens--breakpoints-sm: 580px; // small tablet
+$tokens--breakpoints-md: 768px; // tablet
+$tokens--breakpoints-lg: 1024px; // small desktop
+$tokens--breakpoints-xl: 1220px; // desktop
