--- a/context/brand-context/default/scss/00-tokens/_spacing.variables.scss
+++ b/context/brand-context/default/scss/00-tokens/_spacing.variables.scss
@@ -1,12 +1,12 @@
 
 // Do not edit directly
-// Generated on Wed, 27 Apr 2022 15:18:06 GMT
+// Generated on Wed, 27 Apr 2022 21:29:21 GMT
 
-$spacing-0: 0; // no spacing, zero.
-$spacing-100: .25rem; // .25rem, 4px.
-$spacing-200: .5rem; // .5rem, 8px.
-$spacing-400: 1rem; // 1rem, 16px.
-$spacing-600: 1.5rem; // 1.5rem, 24px.
-$spacing-800: 2rem; // 2rem, 32px.
-$spacing-1200: 3rem; // 3rem, 48px.
-$spacing-1600: 4rem; // 4rem, 64px.
+$tokens--spacing-0: 0; // no spacing, zero.
+$tokens--spacing-100: .25rem; // .25rem, 4px.
+$tokens--spacing-200: .5rem; // .5rem, 8px.
+$tokens--spacing-400: 1rem; // 1rem, 16px.
+$tokens--spacing-600: 1.5rem; // 1.5rem, 24px.
+$tokens--spacing-800: 2rem; // 2rem, 32px.
+$tokens--spacing-1200: 3rem; // 3rem, 48px.
+$tokens--spacing-1600: 4rem; // 4rem, 64px.
