--- a/context/brand-context/springernature/scss/00-tokens/_breakpoints.variables.scss
+++ b/context/brand-context/springernature/scss/00-tokens/_breakpoints.variables.scss
@@ -1,8 +1,8 @@
 
 // Do not edit directly
-// Generated on Wed, 27 Apr 2022 15:18:06 GMT
+// Generated on Wed, 27 Apr 2022 21:29:21 GMT
 
-$breakpoints-tablet-width: 480px; // tablet-width
-$breakpoints-tablet-wide-width: 768px; // tablet-wide-width
-$breakpoints-wide-layout: 876px; // wide-layout
-$breakpoints-desktop-width: 1024px; // desktop-width
+$tokens--breakpoints-tablet-width: 480px; // tablet-width
+$tokens--breakpoints-tablet-wide-width: 768px; // tablet-wide-width
+$tokens--breakpoints-wide-layout: 876px; // wide-layout
+$tokens--breakpoints-desktop-width: 1024px; // desktop-width
