--- a/context/brand-context/default/scss/60-utilities/u-spacing.scss
+++ b/context/brand-context/default/scss/60-utilities/u-spacing.scss
@@ -1,320 +1,170 @@
-.u-padding-0 {
-  padding: 0;
-}
-
-.u-padding-left-0 {
-  padding-left: 0;
-}
-
-.u-padding-right-0 {
-  padding-right: 0;
-}
-
-.u-padding-top-0 {
-  padding-top: 0;
-}
-
-.u-padding-bottom-0 {
-  padding-bottom: 0;
-}
-
-.u-margin-0 {
-  margin: 0;
-}
-
-.u-margin-left-0 {
-  margin-left: 0;
-}
-
-.u-margin-right-0 {
-  margin-right: 0;
-}
-
-.u-margin-top-0 {
-  margin-top: 0;
-}
-
-.u-margin-bottom-0 {
-  margin-bottom: 0;
-}
-
-.u-padding-100 {
-  padding: .25rem;
-}
-
-.u-padding-left-100 {
-  padding-left: .25rem;
-}
-
-.u-padding-right-100 {
-  padding-right: .25rem;
-}
-
-.u-padding-top-100 {
-  padding-top: .25rem;
-}
-
-.u-padding-bottom-100 {
-  padding-bottom: .25rem;
-}
-
-.u-margin-100 {
-  margin: .25rem;
-}
-
-.u-margin-left-100 {
-  margin-left: .25rem;
-}
-
-.u-margin-right-100 {
-  margin-right: .25rem;
-}
-
-.u-margin-top-100 {
-  margin-top: .25rem;
-}
-
-.u-margin-bottom-100 {
-  margin-bottom: .25rem;
-}
-
-.u-padding-200 {
-  padding: .5rem;
-}
-
-.u-padding-left-200 {
-  padding-left: .5rem;
-}
-
-.u-padding-right-200 {
-  padding-right: .5rem;
-}
-
-.u-padding-top-200 {
-  padding-top: .5rem;
-}
-
-.u-padding-bottom-200 {
-  padding-bottom: .5rem;
-}
-
-.u-margin-200 {
-  margin: .5rem;
-}
-
-.u-margin-left-200 {
-  margin-left: .5rem;
-}
-
-.u-margin-right-200 {
-  margin-right: .5rem;
-}
-
-.u-margin-top-200 {
-  margin-top: .5rem;
-}
-
-.u-margin-bottom-200 {
-  margin-bottom: .5rem;
-}
-
-.u-padding-400 {
-  padding: 1rem;
-}
-
-.u-padding-left-400 {
-  padding-left: 1rem;
-}
-
-.u-padding-right-400 {
-  padding-right: 1rem;
-}
-
-.u-padding-top-400 {
-  padding-top: 1rem;
-}
-
-.u-padding-bottom-400 {
-  padding-bottom: 1rem;
-}
-
-.u-margin-400 {
-  margin: 1rem;
-}
-
-.u-margin-left-400 {
-  margin-left: 1rem;
-}
-
-.u-margin-right-400 {
-  margin-right: 1rem;
-}
-
-.u-margin-top-400 {
-  margin-top: 1rem;
-}
-
-.u-margin-bottom-400 {
-  margin-bottom: 1rem;
-}
-
-.u-padding-600 {
-  padding: 1.5rem;
-}
-
-.u-padding-left-600 {
-  padding-left: 1.5rem;
-}
-
-.u-padding-right-600 {
-  padding-right: 1.5rem;
-}
-
-.u-padding-top-600 {
-  padding-top: 1.5rem;
-}
-
-.u-padding-bottom-600 {
-  padding-bottom: 1.5rem;
-}
-
-.u-margin-600 {
-  margin: 1.5rem;
-}
-
-.u-margin-left-600 {
-  margin-left: 1.5rem;
-}
-
-.u-margin-right-600 {
-  margin-right: 1.5rem;
-}
-
-.u-margin-top-600 {
-  margin-top: 1.5rem;
-}
-
-.u-margin-bottom-600 {
-  margin-bottom: 1.5rem;
-}
-
-.u-padding-800 {
-  padding: 2rem;
-}
-
-.u-padding-left-800 {
-  padding-left: 2rem;
-}
-
-.u-padding-right-800 {
-  padding-right: 2rem;
-}
-
-.u-padding-top-800 {
-  padding-top: 2rem;
-}
-
-.u-padding-bottom-800 {
-  padding-bottom: 2rem;
-}
-
-.u-margin-800 {
-  margin: 2rem;
-}
-
-.u-margin-left-800 {
-  margin-left: 2rem;
-}
-
-.u-margin-right-800 {
-  margin-right: 2rem;
-}
-
-.u-margin-top-800 {
-  margin-top: 2rem;
-}
-
-.u-margin-bottom-800 {
-  margin-bottom: 2rem;
-}
-
-.u-padding-1200 {
-  padding: 3rem;
-}
-
-.u-padding-left-1200 {
-  padding-left: 3rem;
-}
-
-.u-padding-right-1200 {
-  padding-right: 3rem;
-}
-
-.u-padding-top-1200 {
-  padding-top: 3rem;
-}
-
-.u-padding-bottom-1200 {
-  padding-bottom: 3rem;
-}
-
-.u-margin-1200 {
-  margin: 3rem;
-}
-
-.u-margin-left-1200 {
-  margin-left: 3rem;
-}
-
-.u-margin-right-1200 {
-  margin-right: 3rem;
-}
-
-.u-margin-top-1200 {
-  margin-top: 3rem;
-}
-
-.u-margin-bottom-1200 {
-  margin-bottom: 3rem;
-}
-
-.u-padding-1600 {
-  padding: 4rem;
-}
-
-.u-padding-left-1600 {
-  padding-left: 4rem;
-}
-
-.u-padding-right-1600 {
-  padding-right: 4rem;
-}
-
-.u-padding-top-1600 {
-  padding-top: 4rem;
-}
-
-.u-padding-bottom-1600 {
-  padding-bottom: 4rem;
-}
-
-.u-margin-1600 {
-  margin: 4rem;
-}
-
-.u-margin-left-1600 {
-  margin-left: 4rem;
-}
-
-.u-margin-right-1600 {
-  margin-right: 4rem;
-}
-
-.u-margin-top-1600 {
-  margin-top: 4rem;
-}
-
-.u-margin-bottom-1600 {
-  margin-bottom: 4rem;
-}
-
+.u-text-color-white {color: #ffffff;}
+.u-border-color-white {border-color: #ffffff;}
+.u-background-color-white {background-color: #ffffff;}
+.u-text-color-black {color: #000000;}
+.u-border-color-black {border-color: #000000;}
+.u-background-color-black {background-color: #000000;}
+.u-text-color-grayscale {color: #f8f8f8;}
+.u-border-color-grayscale {border-color: #f8f8f8;}
+.u-background-color-grayscale {background-color: #f8f8f8;}
+.u-text-color-grayscale {color: #f3f3f3;}
+.u-border-color-grayscale {border-color: #f3f3f3;}
+.u-background-color-grayscale {background-color: #f3f3f3;}
+.u-text-color-grayscale {color: #dadada;}
+.u-border-color-grayscale {border-color: #dadada;}
+.u-background-color-grayscale {background-color: #dadada;}
+.u-text-color-grayscale {color: #999999;}
+.u-border-color-grayscale {border-color: #999999;}
+.u-background-color-grayscale {background-color: #999999;}
+.u-text-color-grayscale {color: #666666;}
+.u-border-color-grayscale {border-color: #666666;}
+.u-background-color-grayscale {background-color: #666666;}
+.u-text-color-grayscale {color: #555555;}
+.u-border-color-grayscale {border-color: #555555;}
+.u-background-color-grayscale {background-color: #555555;}
+.u-text-color-grayscale {color: #222222;}
+.u-border-color-grayscale {border-color: #222222;}
+.u-background-color-grayscale {background-color: #222222;}
+.u-text-color-primary {color: #01324b;}
+.u-border-color-primary {border-color: #01324b;}
+.u-background-color-primary {background-color: #01324b;}
+.u-text-color-primary {color: #025e8d;}
+.u-border-color-primary {border-color: #025e8d;}
+.u-background-color-primary {background-color: #025e8d;}
+.u-text-color-primary {color: #ebf1f5;}
+.u-border-color-primary {border-color: #ebf1f5;}
+.u-background-color-primary {background-color: #ebf1f5;}
+.u-text-color-primary {color: #cedbe0;}
+.u-border-color-primary {border-color: #cedbe0;}
+.u-background-color-primary {background-color: #cedbe0;}
+.u-text-color-primary {color: #000000;}
+.u-border-color-primary {border-color: #000000;}
+.u-background-color-primary {background-color: #000000;}
+.u-text-color-primary {color: #ffffff;}
+.u-border-color-primary {border-color: #ffffff;}
+.u-background-color-primary {background-color: #ffffff;}
+.u-text-color-information {color: #c40606;}
+.u-border-color-information {border-color: #c40606;}
+.u-background-color-information {background-color: #c40606;}
+.u-text-color-information {color: #f58220;}
+.u-border-color-information {border-color: #f58220;}
+.u-background-color-information {background-color: #f58220;}
+.u-text-color-information {color: #003f8d;}
+.u-border-color-information {border-color: #003f8d;}
+.u-background-color-information {background-color: #003f8d;}
+.u-text-color-information {color: #00a69d;}
+.u-border-color-information {border-color: #00a69d;}
+.u-background-color-information {background-color: #00a69d;}
+.u-text-color-interaction {color: #025e8d;}
+.u-border-color-interaction {border-color: #025e8d;}
+.u-background-color-interaction {background-color: #025e8d;}
+.u-text-color-interaction {color: #a345c9;}
+.u-border-color-interaction {border-color: #a345c9;}
+.u-background-color-interaction {background-color: #a345c9;}
+.u-text-color-interaction {color: #ffcc00;}
+.u-border-color-interaction {border-color: #ffcc00;}
+.u-background-color-interaction {background-color: #ffcc00;}
+.u-text-color-springer {color: #00285a;}
+.u-border-color-springer {border-color: #00285a;}
+.u-background-color-springer {background-color: #00285a;}
+.u-text-color-springer {color: #0176c3;}
+.u-border-color-springer {border-color: #0176c3;}
+.u-background-color-springer {background-color: #0176c3;}
+.u-text-color-springer {color: #ebf6ff;}
+.u-border-color-springer {border-color: #ebf6ff;}
+.u-background-color-springer {background-color: #ebf6ff;}
+.u-text-color-research {color: #c75301;}
+.u-border-color-research {border-color: #c75301;}
+.u-background-color-research {background-color: #c75301;}
+.u-text-color-research {color: #007373;}
+.u-border-color-research {border-color: #007373;}
+.u-background-color-research {background-color: #007373;}
+.u-text-color-research {color: #785ba7;}
+.u-border-color-research {border-color: #785ba7;}
+.u-background-color-research {background-color: #785ba7;}
+.u-text-color-research {color: #0070a8;}
+.u-border-color-research {border-color: #0070a8;}
+.u-background-color-research {background-color: #0070a8;}
+.u-text-color-research {color: #be1818;}
+.u-border-color-research {border-color: #be1818;}
+.u-background-color-research {background-color: #be1818;}
+.u-padding-0 {padding: 0;}
+.u-padding-left-0 {padding-left: 0;}
+.u-padding-right-0 {padding-right: 0;}
+.u-padding-top-0 {padding-top: 0;}
+.u-padding-bottom-0 {padding-bottom: 0;}
+.u-margin-0 {margin: 0;}
+.u-margin-left-0 {margin-left: 0;}
+.u-margin-right-0 {margin-right: 0;}
+.u-margin-top-0 {margin-top: 0;}
+.u-margin-bottom-0 {margin-bottom: 0;}
+.u-padding-100 {padding: .25rem;}
+.u-padding-left-100 {padding-left: .25rem;}
+.u-padding-right-100 {padding-right: .25rem;}
+.u-padding-top-100 {padding-top: .25rem;}
+.u-padding-bottom-100 {padding-bottom: .25rem;}
+.u-margin-100 {margin: .25rem;}
+.u-margin-left-100 {margin-left: .25rem;}
+.u-margin-right-100 {margin-right: .25rem;}
+.u-margin-top-100 {margin-top: .25rem;}
+.u-margin-bottom-100 {margin-bottom: .25rem;}
+.u-padding-200 {padding: .5rem;}
+.u-padding-left-200 {padding-left: .5rem;}
+.u-padding-right-200 {padding-right: .5rem;}
+.u-padding-top-200 {padding-top: .5rem;}
+.u-padding-bottom-200 {padding-bottom: .5rem;}
+.u-margin-200 {margin: .5rem;}
+.u-margin-left-200 {margin-left: .5rem;}
+.u-margin-right-200 {margin-right: .5rem;}
+.u-margin-top-200 {margin-top: .5rem;}
+.u-margin-bottom-200 {margin-bottom: .5rem;}
+.u-padding-400 {padding: 1rem;}
+.u-padding-left-400 {padding-left: 1rem;}
+.u-padding-right-400 {padding-right: 1rem;}
+.u-padding-top-400 {padding-top: 1rem;}
+.u-padding-bottom-400 {padding-bottom: 1rem;}
+.u-margin-400 {margin: 1rem;}
+.u-margin-left-400 {margin-left: 1rem;}
+.u-margin-right-400 {margin-right: 1rem;}
+.u-margin-top-400 {margin-top: 1rem;}
+.u-margin-bottom-400 {margin-bottom: 1rem;}
+.u-padding-600 {padding: 1.5rem;}
+.u-padding-left-600 {padding-left: 1.5rem;}
+.u-padding-right-600 {padding-right: 1.5rem;}
+.u-padding-top-600 {padding-top: 1.5rem;}
+.u-padding-bottom-600 {padding-bottom: 1.5rem;}
+.u-margin-600 {margin: 1.5rem;}
+.u-margin-left-600 {margin-left: 1.5rem;}
+.u-margin-right-600 {margin-right: 1.5rem;}
+.u-margin-top-600 {margin-top: 1.5rem;}
+.u-margin-bottom-600 {margin-bottom: 1.5rem;}
+.u-padding-800 {padding: 2rem;}
+.u-padding-left-800 {padding-left: 2rem;}
+.u-padding-right-800 {padding-right: 2rem;}
+.u-padding-top-800 {padding-top: 2rem;}
+.u-padding-bottom-800 {padding-bottom: 2rem;}
+.u-margin-800 {margin: 2rem;}
+.u-margin-left-800 {margin-left: 2rem;}
+.u-margin-right-800 {margin-right: 2rem;}
+.u-margin-top-800 {margin-top: 2rem;}
+.u-margin-bottom-800 {margin-bottom: 2rem;}
+.u-padding-1200 {padding: 3rem;}
+.u-padding-left-1200 {padding-left: 3rem;}
+.u-padding-right-1200 {padding-right: 3rem;}
+.u-padding-top-1200 {padding-top: 3rem;}
+.u-padding-bottom-1200 {padding-bottom: 3rem;}
+.u-margin-1200 {margin: 3rem;}
+.u-margin-left-1200 {margin-left: 3rem;}
+.u-margin-right-1200 {margin-right: 3rem;}
+.u-margin-top-1200 {margin-top: 3rem;}
+.u-margin-bottom-1200 {margin-bottom: 3rem;}
+.u-padding-1600 {padding: 4rem;}
+.u-padding-left-1600 {padding-left: 4rem;}
+.u-padding-right-1600 {padding-right: 4rem;}
+.u-padding-top-1600 {padding-top: 4rem;}
+.u-padding-bottom-1600 {padding-bottom: 4rem;}
+.u-margin-1600 {margin: 4rem;}
+.u-margin-left-1600 {margin-left: 4rem;}
+.u-margin-right-1600 {margin-right: 4rem;}
+.u-margin-top-1600 {margin-top: 4rem;}
+.u-margin-bottom-1600 {margin-bottom: 4rem;}
