--- a/toolkits/nature/packages/nature-section-heading/scss/50-components/section-heading.scss
+++ b/toolkits/nature/packages/nature-section-heading/scss/50-components/section-heading.scss
@@ -1,7 +1,8 @@
 .c-section-heading {
 	border-top: $section-heading--border-top;
 	border-bottom: $section-heading--border-bottom;
-	padding: $section-heading--padding;
+	padding-top: $section-heading--padding;
+	padding-bottom: $section-heading--padding;
 	margin-bottom: $section-heading--margin-bottom;
 	line-height: $section-heading--line-height;
 
@@ -17,6 +18,7 @@
 
 .c-section-heading--no-bt {
 	border-top: 0;
+	padding-top: 0;
 }
 
 .c-section-heading__link {
