using default base size of 1.125rem

--- a/context/brand-context/springer/scss/10-settings/typography.scss
+++ b/context/brand-context/springer/scss/10-settings/typography.scss
@@ -21,5 +21,5 @@ $context--font-size-h3-min: $context--font-size-h4;
 $context--font-size-h4-min: $context--font-size-h5;
 $context--font-size-h5-min: 1rem;
 
-$context--font-size-furniture: $context--font-size-sm;
-$context--font-size-interface: $context--font-size-sm;
+$context--font-size-furniture: $context--font-size-base;
+$context--font-size-interface: $context--font-size-base;
