basic partials architecture

--- a/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
+++ b/toolkits/global/packages/global-forms/scss/50-components/_forms.scss
@@ -1,6 +1,33 @@
 @use 'sass:math';
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Input row component */
 
+/*
 .c-input-row {
 	display: flex;
 	flex-wrap: wrap;
@@ -14,10 +41,11 @@
 	flex: 1 1 auto;
 	padding-right:  math.div($global-form--grid-gutter-width, 2);
 	padding-left:   math.div($global-form--grid-gutter-width, 2);
-}
+}*/
 
 /* Input group component */
 
+/*
 .c-input-group {
 	display: block;
 	margin-bottom: 1rem;
@@ -76,3 +104,4 @@
 	color: $global-form--color-disabled;
 	cursor: not-allowed;
 }
+*/
