--- a/toolkits/global/packages/global-forms/scss/10-settings/_default.scss
+++ b/toolkits/global/packages/global-forms/scss/10-settings/_default.scss
@@ -1,10 +1,27 @@
 @use 'sass:math';
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /**
  * @springernature/global-forms
  * Default skin settings
  * Replace these in your application
  *
  */
+ /*
 $global-form--padding: 12px;
 $global-form--border-color: #999;
 $global-form--border-radius: 3px;
@@ -18,3 +35,4 @@ $global-form--color: #000;
 $global-form--color-required: #c64127;
 $global-form--color-disabled: #aca9a3;
 $global-form--grid-gutter-width: 10px;
+*/
